Finder implementation - first version