@@ -14,9 +14,7 @@
  *  limitations under the License.
  */
 /// usr/bin/env jbang "$0" "$@" ; exit $?
-//JAVA 24
-//JAVAC_OPTIONS --enable-preview -source 24
-//JAVA_OPTIONS --enable-preview
+//JAVA 25
 //DEPS com.vladsch.flexmark:flexmark-all:0.64.8
 
 import com.vladsch.flexmark.html.HtmlRenderer;
